--- a/canvas-tries.html
+++ b/canvas-tries.html
@@ -5,29 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meme</title>
+    <title>Canvas</title>
     <link rel="stylesheet" href="css/main.css">
+
 </head>
 
-<body onload="onInit()">
+<body>
 
 
-    <table>
-        <tbody>
-            <tr>
-                <td>
-                    <img src="" alt="">
 
-                </td>
-            </tr>
-        </tbody>
-    </table>
 
     <script src="js/util-service.js"></script>
     <script src="js/meme-service.js"></script>
     <script src="js/meme-controller.js"></script>
-
-
 </body>
 
 </html>
