--- a/meme-editor.html
+++ b/meme-editor.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Meme</title>
+    <title>Meme-editor</title>
     <link rel="stylesheet" href="css/main.css">
+
 </head>
-
-<body onload="onInit()">
-
-
-    <table>
-        <tbody>
-            <tr>
-                <td>
-                    <img src="" alt="">
-
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<body>
+    
 
     <script src="js/util-service.js"></script>
     <script src="js/meme-service.js"></script>
     <script src="js/meme-controller.js"></script>
 
-
 </body>
-
 </html>
