--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <table>
-        <tbody>
+        <tbody class="gallery">
             <tr>
                 <td>
                     <img src="" alt="">
