--- a/index.html
+++ b/index.html
@@ -10,18 +10,11 @@
 </head>
 
 <body onload="onInit()">
-
-
-    <table>
-        <tbody class="gallery">
-            <tr>
-                <td>
-                    <img src="" alt="">
-
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <h1>Ultimate Meme Creator</h1>
+    <form> <input type="text"></form>
+    <section class="imgs-container ">
+       
+    </section>
 
     <script src="js/util-service.js"></script>
     <script src="js/meme-service.js"></script>
