--- a/canvas-tries.html
+++ b/canvas-tries.html
@@ -10,14 +10,23 @@
 
 </head>
 
-<body>
+<body onload="init()">
 
+<canvas id="my-canvas" width="600" height="600">
+    Update your browser to enjoy canvas!
+</canvas>
+
+
+    <img src="meme-imgs/2.jpg" alt="">
 
 
 
     <script src="js/util-service.js"></script>
     <script src="js/meme-service.js"></script>
     <script src="js/meme-controller.js"></script>
+    <script src="js/draw-func.js"></script>
+
+
 </body>
 
 </html>
