change files names

--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -17,14 +17,12 @@
 </canvas>
 
 
-    <img src="meme-imgs/2.jpg" alt="">
-
-
 
     <script src="js/util-service.js"></script>
-    <script src="js/meme-service.js"></script>
-    <script src="js/meme-controller.js"></script>
-    <script src="js/draw-func.js"></script>
+    <script src="js/gallery-service.js"></script>
+    <script src="js/gallery-controller.js"></script>
+    <script src="js/canvas-controller.js"></script>
+    <script src="js/canvas-service.js"></script>
 
 
 </body>
