--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     </section>
 
     <script src="js/util-service.js"></script>
-    <script src="js/meme-service.js"></script>
-    <script src="js/meme-controller.js"></script>
+    <script src="js/gallery-service.js"></script>
+    <script src="js/gallery-controller.js"></script>
+    <script src="js/canvas-service.js"></script>
+    <script src="js/canvas-controller.js"></script>
 
 
 </body>
