--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -29,6 +29,11 @@
 
 Enter some text: <input type="text" name="txt" oninput="onDrawText(this)">
 
+<button ><a href="index.html">Gallery</a></button>
+<!-- <button onclick="increaseFontSize()">+</button> -->
+
+
+
 </div>
 
     <script src="js/util-service.js"></script>
