--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body onload="onInit()">
     <h1>Ultimate Meme Creator</h1>
-    <form> <input type="text"></form>
+    <form> <input type="text" oninput="onSetFilter(this)"></form>
     <section class="imgs-container ">
        
     </section>
