change canvas html

--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -19,20 +19,14 @@
 
 <div>
 
-<!-- <form id="frmRegister">
-   
-           <label for="text">Enter text:</label>
-        <input onchange="onChangeText(event)" type="text" id="name" name="text" placeholder="Enter text here" required />
-
-
-</form><br /> -->
 
 Enter some text: <input type="text" name="txt" oninput="onDrawText(this)">
 
 <button ><a href="index.html">Gallery</a></button>
 <!-- <button onclick="increaseFontSize()">+</button> -->
 
-
+<button> <a href="#" class="save" onclick="downloadCanvas(this)" download="">Download</a>
+</button>
 
 </div>
 
