try to change gallery size flex

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body onload="onInit()">
-    <h1>Ultimate Meme Creator</h1>
-    <form> <input type="text" oninput="onSetFilter(this)"></form>
+    <header>
+        <h1>Ultimate Meme Creator</h1>
+        <form> <input type="text" oninput="onSetFilter(this)"></form>
+    </header>
     <section class="imgs-container ">
-       
+
     </section>
 
 
