--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Canvas</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/canvas.css">
+        <link rel="stylesheet" href="css/helpers.css">
+
 
 </head>
 
