css keywords gallery

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body onload="onInit()">
-    <header>
+    <header class="flex">
         <h1>Ultimate Meme Creator</h1>
         <form> <input type="text" oninput="onSetFilter(this,event)"></form>
         <button  class="searchBtn" onclick="onSearch()">search</button>
         <div class="search-container">
-            <ul class="key-words-list clean-list">
+            <ul class="key-words-list flex words clean-list">
                 
             </ul>
         </div>
