--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body onload="onInit()">
     <header class="flex">
         <h1>Ultimate Meme Creator</h1>
-        <form> <input type="text" oninput="onSetFilter(this,event)"></form>
+        <form> <input type="text" oninput="onSetFilter(this)" onkeypress="runScript(event,this)"></form>
         <button  class="searchBtn" onclick="onSearch()">search</button>
         <div class="search-container">
             <ul class="key-words-list flex words clean-list">
