--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -15,10 +15,15 @@
 <body onload="init()">
 
     <nav-bar class="nav-bar flex align-both ">
-        <button><a href="index.html">Gallery</a></button>
-        <button class="download"> <a href="#" class="save" onclick="downloadCanvas(this)" download="">Download</a>
+        <select class= "lang" onchange="onSetLang(this.value)">
+            <option value="en">English</option>
+            <option value="he">עברית</option>
+        </select>
+
+        <button data-trans="backToGalleryButton" ><a href="index.html">Gallery</a></button>
+        <button data-trans="downloadButton" class="download"> <a href="#" class="save" onclick="downloadCanvas(this)" download="">Download</a>
         </button>
-        <button class="clear" onclick="onClearCanvas()">Clear</button>
+        <button data-trans="clearButton" class="clear" onclick="onClearCanvas()">Clear</button>
 
     </nav-bar>
 
@@ -63,6 +68,7 @@
 
 
         <script src="js/util-service.js"></script>
+        <script src="js/i18n-service.js"></script>
         <script src="js/gallery-service.js"></script>
         <script src="js/gallery-controller.js"></script>
         <script src="js/canvas-controller.js"></script>
