--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -22,7 +22,7 @@
 
         <button  ><a href="index.html" data-trans="backToGalleryButton">Gallery</a></button>
 
-        <input class="upload" type="file" name="image" onchange="onFileInputChange(event)" />
+        <input data-trans="uploadButton" class="upload" type="file" name="image" onchange="onFileInputChange(event)"  />
 
         <button data-trans="downloadButton" class="download"> <a href="#" class="save" onclick="downloadCanvas(this)" download="">Download</a>
         </button>
