--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -8,77 +8,54 @@
     <title>Canvas</title>
     <link rel="stylesheet" href="css/canvas.css">
     <link rel="stylesheet" href="css/helpers.css">
-
-
 </head>
 
 <body onload="init()">
-
     <nav-bar class="nav-bar flex align-both ">
-        <select class= "lang" onchange="onSetLang(this.value)">
+        <select class="lang" onchange="onSetLang(this.value)">
             <option value="en">English</option>
             <option value="he">עברית</option>
         </select>
-
-        <button  ><a href="index.html" data-trans="backToGalleryButton">Gallery</a></button>
-
-        <input data-trans="uploadButton" class="upload" type="file" name="image" onchange="onFileInputChange(event)"  />
-
-        <button data-trans="downloadButton" class="download"> <a href="#" class="save" onclick="downloadCanvas(this)" download="">Download</a>
+        <button><a href="index.html" data-trans="backToGalleryButton">Gallery</a></button>
+        <input data-trans="uploadButton" class="upload" type="file" name="image" onchange="onFileInputChange(event)" />
+        <button data-trans="downloadButton" class="download"> <a href="#" class="save" onclick="downloadCanvas(this)"
+                download="">Download</a>
         </button>
         <button data-trans="clearButton" class="clear" onclick="onClearCanvas()">Clear</button>
-
         <form action="" method="POST" enctype="multipart/form-data" onsubmit="uploadImg(this, event)">
             <input name="img" id="imgData" type="hidden" />
             <button type="submit">Publish</button>
         </form>
-
     </nav-bar>
 
     <main>
         <section class="container main-wrapper space-between flex">
-
             <div class="canvas">
                 <canvas id="my-canvas" width="600" height="600">
                     Update your browser to enjoy canvas!
                 </canvas>
             </div>
-
             <div class="control-box choice-wrapper flex">
-
-
                 Enter some text:<input type="text" name="txt" oninput="onDrawText(this)">
-
-
-                <!-- <button onclick="increaseFontSize()">+</button> -->
-
                 <input class="input" type="color" onchange="onChangeColor(this.value)" />
-
-<label>Font size:
-    <input type="range" class="font-size"  value = font-size min="10" max="50" step="2" data-property="size" oninput="editTxtSize(this)">
-</label>
-
-    <select onchange="onChangeFont(this.value)">
-    <option>Font</option>
-    <option value="Arial">Arial</option>
-    <option value="Times New Roman">Times New Roman</option>
-    <option value="Helvetica">Helvetica</option>
-    <option value="Verdana">Verdana</option>
-
-  
-    </select>
+                <label data-trans="font">Font size:
+                    <input type="range" class="font-size" value=font-size min="10" max="50" step="2"
+                        data-property="size" oninput="editTxtSize(this)">
+                </label>
+                <select onchange="onChangeFont(this.value)">
+                    <option>Font</option>
+                    <option value="Arial">Arial</option>
+                    <option value="Times New Roman">Times New Roman</option>
+                    <option value="Helvetica">Helvetica</option>
+                    <option value="Verdana">Verdana</option>
+                </select>
 
                 <!-- Enter some text:<input type="text" name="txt" oninput="onDrawText(this)"> -->
 
             </div>
             <div id="fb-root"></div>
-<div class="share-container"></div>
-
-
+            <div class="share-container"></div>
         </section>
-
-
-
 
         <script src="js/util-service.js"></script>
         <script src="js/i18n-service.js"></script>
@@ -86,8 +63,5 @@
         <script src="js/gallery-controller.js"></script>
         <script src="js/canvas-controller.js"></script>
         <script src="js/canvas-service.js"></script>
-
-
 </body>
-
 </html>
