--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meme</title>
-    <script defer src="./fonts/fontawesome-all.js"></script>
+    <!-- <script defer src="./fonts/fontawesome-all.js"></script> -->
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/helpers.css">
 
@@ -45,7 +45,7 @@
     <section class="contact-container">
         <form id="contact">
             <p class="first-msg">Get In Touch</p>
-            <p class="second-msg">In order to get in touch use the contact form below</p>
+            <p class="second-msg">In order to get in touch use the contact form below :</p>
             <input name="name" type="text" class="feedback-input" placeholder="Subject" />
             <textarea name="text" class="feedback-input" placeholder="Write your message here..."></textarea>
             <input type="submit" value="SEND" onclick="onContact()" />
