--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meme</title>
-    <script defer src="./fonts/fontawesome-all.js"></script>
-    <link rel="stylesheet" href="css/gallery.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" />   
+ <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/helpers.css">
 
 </head>
