--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -36,7 +36,7 @@
 
     <main>
         <section class="container main-wrapper space-between flex">
-            <div class="canvas">
+            <div class="canvas flex">
                 <canvas id="my-canvas" width="600" height="600">
                     Update your browser to enjoy canvas!
                 </canvas>
