--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -19,7 +19,7 @@
         </select>
 
         <button><a href="index.html" data-trans="backToGalleryButton">Gallery</a></button>
-        <button data-trans="clearButton" class="clear" onclick="onClearCanvas()">Clear</button>
+        <button data-trans="clearButton" class="clear" onclick="clearCanvas()">Clear</button>
 
         <button data-trans="downloadButton" class="download"> <a href="#" class="save" onclick="downloadCanvas(this)"
                 download="">Download</a>
