trying to add more img obj

--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -48,6 +48,8 @@
             <div class="share-container flex"></div>
         </section>
 
+                <script src="js/add.js"></script>
+
         <script src="js/util-service.js"></script>
         <script src="js/i18n-service.js"></script>
         <script src="js/gallery-service.js"></script>
