--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <header class="flex">
         <h1>Ultimate Meme Creator</h1>
-        <input type="text" oninput="onSetFilter(this)" onkeyup="runScript(event)" onclick="onSearch()">
+        <input type="text" oninput="onSetFilter(this)" onkeyup="runScript(event)" onclick="">
 
     </header>
 
