--- a/canvas-editor.html
+++ b/canvas-editor.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,17 +9,14 @@
     <link rel="stylesheet" href="css/canvas.css">
     <link rel="stylesheet" href="css/helpers.css">
 </head>
-
 <body onload="init()">
     <nav-bar class="nav-bar flex align-both ">
         <select class="lang" onchange="onSetLang(this.value)">
             <option value="en">English</option>
             <option value="he">עברית</option>
         </select>
-
         <button><a href="index.html" data-trans="backToGalleryButton">Gallery</a></button>
         <button data-trans="clearButton" class="clear" onclick="clearCanvas()">Clear</button>
-
         <button data-trans="downloadButton" class="download"> <a href="#" class="save" onclick="downloadCanvas(this)"
                 download="">Download</a>
         </button>
@@ -31,25 +27,19 @@
         <input class="upload" type="file" name="image" onchange="onFileInputChange(event)" />
         <label data-trans="uploadButton" for="file">Choose a file</label>
     </nav-bar>
-
     <main>
         <section class="container main-wrapper space-between flex">
-            <div class="canvas flex">
+            <div class="canvas">
                 <canvas id="my-canvas" width="600" height="600">
                     Update your browser to enjoy canvas!
                 </canvas>
             </div>
-
             <div class="control-box choice-wrapper flex">
-
             </div>
-
             <div id="fb-root"></div>
             <div class="share-container flex"></div>
         </section>
-
                 <script src="js/add.js"></script>
-
         <script src="js/util-service.js"></script>
         <script src="js/i18n-service.js"></script>
         <script src="js/gallery-service.js"></script>
@@ -57,5 +47,4 @@
         <script src="js/canvas-controller.js"></script>
         <script src="js/canvas-service.js"></script>
 </body>
-
 </html>
